# Games_recommendation_system

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
recommendation_games/: games.csv  main.py  main_app.py  scraping.py
recommendation_games/pages/: 1_Game_Recommendations.py  2_Search_Games.py
